#noinst_PROGRAMS = simple_client simple_server
#
#CPPFLAGS = -I../src
#
#LDADD  = -L../src/.libs -L../src/Codecs/.libs -L../src/Filters/.libs \
#         -L../src/Message/.libs -L../src/Net/.libs -L../src/Objects/.libs
#
#LIBS = -lAtlasNet -lAtlas -lAtlasCodecs -lAtlasFilters -lAtlas -lbz2 -lz
#
#LDFLAGS = -all-static
#
#simple_client_SOURCES = simple_client.cpp sockbuf.h
#simple_server_SOURCES = simple_server.cpp sockbuf.h

EXTRA_DIST = \
	building.dox index.dox message.dox \
	objects.dox preamble.dox simple.dox
