
INCLUDES = -I$(top_srcdir)

lib_LTLIBRARIES = libAtlasCodecs-0.6.la

libAtlasCodecs_0_6_la_LDFLAGS = $(INTERFACE_VERSION)

libAtlasCodecs_0_6_la_SOURCES = \
	XML.cpp Packed.cpp Bach.cpp

libAtlasCodecsincludedir = $(includedir)/Atlas-C++-0.6/Atlas/Codecs

libAtlasCodecsinclude_HEADERS = XML.h Packed.h Utility.h Bach.h
