
lib_LTLIBRARIES = libAtlasMessage.la

libAtlasMessage_la_LDFLAGS = $(INTERFACE_VERSION)

libAtlasMessage_la_SOURCES = \
	Object.cpp MEncoder.cpp DecoderBase.cpp QueuedDecoder.cpp

libAtlasMessageincludedir = $(includedir)/Atlas/Message

libAtlasMessageinclude_HEADERS = \
	Object.h Layer.h MEncoder.h DecoderBase.h QueuedDecoder.h
